# inkflow

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: platform-ops.md  script-instruction.md
projects/example-proj/scripts/: script.json  script.md  script_infographic.json
remotion/: package.json  pnpm-lock.yaml
remotion/src/: Root.tsx
remotion/src/compositions/: Chart.tsx  Infographic.tsx  Map.tsx  SeedreamImage.tsx  ShaderTransition.tsx  TextReveal.tsx
remotion/src/lib/: easing.ts  transitions.tsx  types.ts
scripts/: generate_volcano_voice_samples.py
src/: config.py  cost_tracker.py  cover_generator.py  image_generator.py  main.py  models.py  pipeline.py  script_loader.py  shot_frame_generator.py  subtitle_generator.py  tts_generator.py  video_assembler.py  video_generator.py
src/core/: config.py  models.py  script.py
src/cost/: tracker.py
src/generators/: cover.py  image.py  start_frame.py  subtitle.py  tts.py  video.py
src/media/: audio.py  ffmpeg.py  image.py
src/pipeline/: assembler.py  pipeline.py
